Fixed (?) link color showing incorrectly on mobile

--- a/style.css
+++ b/style.css
@@ -90,15 +90,15 @@ ul {
     margin: 2rem 0 0rem 5rem;
 }
 
-.dark-text-container p a {
+.dark-text-container p a, .dark-text-container h2 a {
     color: #fff;
 }
 
-.dark-text-container p a:hover {
+.dark-text-container p a:hover, .dark-text-container h2 a:hover {
     color: #cdf;
 }
 
-.dark-text-container p a:visited {
+.dark-text-container p a:visited, .dark-text-container h2 a:visited {
 }
 
 /* Video */
